--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: swift build -v
+      run: xcodebuild -project Redditor.xcodeproj -scheme Redditor -sdk iphonesimulator build
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild -project Redditor.xcodeproj -scheme Redditor -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11' test-without-building
