--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Print out simulators
+      run: xcrun instruments -s devices
     - name: Build
       run: xcodebuild -project Redditor.xcodeproj -scheme Redditor -sdk iphonesimulator build
     - name: Run tests
