--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Build
       run: xcodebuild -project Redditor.xcodeproj -scheme Redditor -sdk iphonesimulator build
     - name: Run tests
-      run: xcodebuild -project Redditor.xcodeproj -scheme Redditor -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max,OS=14.0' test-without-building
+      run: xcodebuild -project Redditor.xcodeproj -scheme Redditor -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max (14.0)' test-without-building
